# datutil

./: CMakeLists.txt  README.MD
src/: datlib.c  datutil.c
src/drv/: listxml.c  rc2xx.c
